Update ConnectCommand.java